--- a/index.html
+++ b/index.html
@@ -1,60 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Awesome Website?</title>
-	</head>
-	<body>
-		<header>
-			<div>
-				<p>Header Logo</p>
-				<a href="#">header link one</a>
-				<a href="#">header link two</a>
-				<a href="#">header link three</a>
-			</div>
 
-			<div>
+<head>
+	<meta charset="utf-8">
+	<title>Awesome Website?</title>
+	<link href="./main.css" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
+</head>
+
+<body>
+	<header>
+		<div class="top">
+			<p class="logo">Header Logo</p>
+			<a href="#">header link one</a>
+			<a href="#">header link two</a>
+			<a href="#">header link three</a>
+		</div>
+
+		<div class="bottom">
+			<div class="left">
 				<h1>This website is awesome</h1>
-				<p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+				<p>This website has some subtext that goes here under the main title. It's a smaller font and the
+					color lower contrast</p>
 				<button>Sign up</button>
 			</div>
-		</header>
+			<div class="right">
+				<p>this is a placeholder for an image</p>
+			</div>
+		</div>
+	</header>
 
-		<main>
-			<section>
-				<h2>Some random information</h2>
-				<ul>
-					<li>
-						<div></div>
-						<p>This is some subtext under an illustration or image</p>
-					</li>
-					<li>
-						<div></div>
-						<p>This is some subtext under an illustration or image</p>
-					</li>
-					<li>
-						<div></div>
-						<p>This is some subtext under an illustration or image</p>
-					</li>
-					<li>
-						<div></div>
-						<p>This is some subtext under an illustration or image</p>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-				<p>-Thor, God of Thunder</p>
-			</section>
-			<section>
-				<h3>Call to action! It's time!</h3>
-				<p>Sing up for our product by clicking that button right over there!</p>
-				<button>Sign up</button>
-			</section>
-		</main>
+	<main>
+		<section>
+			<h2>Some random information</h2>
+			<ul>
+				<li>
+					<div></div>
+					<p>This is some subtext under an illustration or image</p>
+				</li>
+				<li>
+					<div></div>
+					<p>This is some subtext under an illustration or image</p>
+				</li>
+				<li>
+					<div></div>
+					<p>This is some subtext under an illustration or image</p>
+				</li>
+				<li>
+					<div></div>
+					<p>This is some subtext under an illustration or image</p>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+				maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+			<p>-Thor, God of Thunder</p>
+		</section>
+		<section>
+			<h3>Call to action! It's time!</h3>
+			<p>Sing up for our product by clicking that button right over there!</p>
+			<button>Sign up</button>
+		</section>
+	</main>
 
-		<footer>
-			<p>Copyright &copy The Odin Project 2023?</p>
-		</footer>
-	</body>
+	<footer>
+		<p>Copyright &copy The Odin Project 2023?</p>
+	</footer>
+</body>
+
 </html>
