--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>
 
 	<main>
-		<section>
+		<section class="info">
 			<h2>Some random information</h2>
 			<ul>
 				<li>
@@ -56,12 +56,12 @@
 				</li>
 			</ul>
 		</section>
-		<section>
+		<section class="quote">
 			<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
 				maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
 			<p>-Thor, God of Thunder</p>
 		</section>
-		<section>
+		<section class="to-action">
 			<h3>Call to action! It's time!</h3>
 			<p>Sing up for our product by clicking that button right over there!</p>
 			<button>Sign up</button>
