Add layout/style to quote section, remove main tag
The html had main tag including 3 different sections but to color
background of just one of them (from left to right edge) it needed to be
1 level higher. Main didn't had much purpose, removed to not
 overcomplicate things

--- a/index.html
+++ b/index.html
@@ -34,39 +34,38 @@
 		</div>
 	</header>
 
-	<main>
-		<section class="info">
-			<h2>Some random information</h2>
-			<ul>
-				<li>
-					<div></div>
-					<p>This is some subtext under an illustration or image</p>
-				</li>
-				<li>
-					<div></div>
-					<p>This is some subtext under an illustration or image</p>
-				</li>
-				<li>
-					<div></div>
-					<p>This is some subtext under an illustration or image</p>
-				</li>
-				<li>
-					<div></div>
-					<p>This is some subtext under an illustration or image</p>
-				</li>
-			</ul>
-		</section>
-		<section class="quote">
-			<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
-				maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-			<p>-Thor, God of Thunder</p>
-		</section>
-		<section class="to-action">
-			<h3>Call to action! It's time!</h3>
-			<p>Sing up for our product by clicking that button right over there!</p>
-			<button>Sign up</button>
-		</section>
-	</main>
+	<section class="info">
+		<h2>Some random information</h2>
+		<ul>
+			<li>
+				<div></div>
+				<p>This is some subtext under an illustration or image</p>
+			</li>
+			<li>
+				<div></div>
+				<p>This is some subtext under an illustration or image</p>
+			</li>
+			<li>
+				<div></div>
+				<p>This is some subtext under an illustration or image</p>
+			</li>
+			<li>
+				<div></div>
+				<p>This is some subtext under an illustration or image</p>
+			</li>
+		</ul>
+	</section>
+	<section class="quote">
+		<p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+			or
+			maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+		<p class="author">-Thor, God of Thunder</p>
+	</section>
+	<section class="to-action">
+		<h3>Call to action! It's time!</h3>
+		<p>Sing up for our product by clicking that button right over there!</p>
+		<button>Sign up</button>
+	</section>
 
 	<footer>
 		<p>Copyright &copy The Odin Project 2023?</p>
