--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 			maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
 		<p class="author">-Thor, God of Thunder</p>
 	</section>
-	<section class="to-action">
-		<h3>Call to action! It's time!</h3>
-		<p>Sing up for our product by clicking that button right over there!</p>
+	<section class="call">
+		<div>
+			<h3>Call to action! It's time!</h3>
+			<p>Sing up for our product by clicking that button right over there!</p>
+		</div>
 		<button>Sign up</button>
 	</section>
 
